--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
 
 /*Header/Cabeçalho*/
 
-.logo {
+.logo-area {
     margin-left: 7rem;
 }
 
@@ -50,29 +50,33 @@ a {
     background-color: rgb(36, 32, 32);
 }
 
-.menu {
+#menu {
     display: flex;
     margin-right: 2rem;
 }
 
-.menu li {
+#menu li {
     margin-left: 30px;
     color: #fff;
 }
 
-.menu li:hover{
+#menu li:hover{
     margin-left: 30px;
     background-color: rgb(255, 255, 255);
     color: rgb(36, 32, 32);
 }
 
-.menu li a{
+#menu li a{
     display: block;
     padding: 10px;
 }
 
-.menu a:hover{
+#menu a:hover{
     color: rgb(119, 115, 115);
+}
+
+#btn-mobile {
+    display: none;
 }
 
 /*Banner*/
@@ -139,6 +143,7 @@ button.social:hover {
 figure {
     padding: 0%;
     margin: 0%;
+    margin-bottom: -3%;
 }
 
 .autor{
@@ -420,10 +425,94 @@ footer a:hover {
 
 /*Responsivo celular*/
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
+    .logo-img {
+        width: 55%;
+        -webkit-transition: .3s all ease-in;
+    }
+
+    .logo-area {
+        margin-left: 0% !important;
+    }
+
+    #btn-mobile {
+        display: block;
+    }
+
+    #menu {
+        display: none;
+    }
+
+    #nav.active #menu {
+        display: flex;
+    }
+
+    .banner {
+        background-color: #8a8078;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .conteudo-banner {
+        width: 80%;
+        text-align: justify;
+        padding: 5%;
+    }
+
+    .conteudo-banner h1 {
+        font-size: 40px;
+        text-transform: uppercase;
+        text-align: center;
+        color: #fffffd;
+        padding: 0% !important;
+    }
+
+    .underline {
+        background-color: #fffffd;
+        margin: 0% !important;
+        height: 2px;
+        width: 100%;
+    }
+
+    .conteudo-banner p {
+        font-size: 25px;
+        padding-left: 0% !important;
+        padding-top: 5%;
+        color: #e6ded5;
+    }
+
+    .social-banner {
+        width: 80%;
+        text-align: center;
+        padding-top: 5%;
+        color: #e6ded5;
+    }
+
+    .social-banner a{
+        margin: 5%;
+    }
+
+    button.social {
+        margin-top: 10%;
+    }
+
+    .autor {
+        width: 100%;
+        -webkit-transition: .5s all ease-in;
+    }
+
+    .container {
+        padding: 5%;
+        padding-bottom: 10%;
+    }
+
     .dog-right {
         position: relative;
-        height: 100vh;
+        height: 100%;
         width: 100%;
         background-color: #b88e65;
         display: flex;
@@ -433,13 +522,58 @@ footer a:hover {
         align-content: space-around;
     }
 
+    .dog-right h2 {
+        padding-left: 0% !important;
+    }
+
+    .underline-left {
+        margin-left: 0% !important;
+    }
+
+    .ficha-tecnica {
+        padding-left: 0%;
+        text-align: justify;
+        padding-top: 5%;
+    }
+
+    .dog-right-img {
+        border-radius: 50%;
+        border: 2px solid black;
+        box-shadow: 5px -17px #d8b898;
+        width: 350px;
+        margin-bottom: 15%;
+    }
+
     .dog-left {
         position: relative;
-        height: 100vh;
+        height: 100%;
         background-color: #d8b898;
         display: flex;
         align-items: center;
-        flex-direction: column;s
+        flex-direction: column-reverse;
         justify-content: space-around;
+    }
+    
+    .dog-left h2 {
+        padding-left: 0% !important;
+    }
+
+    .underline-right {
+        margin-left: 0% !important;
+    }
+
+    .ficha-tecnica-right {
+        width: 500px;
+        text-align: justify;
+        padding-left: 0%;
+        padding-top: 5%;
+    }
+
+    .dog-left-img {
+        border-radius: 50%;
+        border: 2px solid black;
+        box-shadow: -5px -17px #e6ded5;
+        width: 350px;
+        margin-bottom: 15%;
     }
 }
