--- a/css/style.css
+++ b/css/style.css
@@ -508,6 +508,7 @@ footer a:hover {
     .container {
         padding: 5%;
         padding-bottom: 10%;
+        width: 80%;
     }
 
     .dog-right {
